--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Rapid Bootstrap Template - Index</title>
+  <title>mixcolors</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -95,7 +95,7 @@
         </div>
 
         <div class="col-lg-6 intro-img order-lg-last order-first" data-aos="zoom-out" data-aos-delay="200">
-          <img src="assets/img/intro-img.svg" alt="" class="img-fluid">
+          <img src="assets/img/logo.png" alt="" class="img-fluid">
         </div>
       </div>
 
