--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
 
   <script>
     var typingEffect = new Typed (".multiText", {
-        strings: ["Portolio", "Marketing", "Design"],
+        strings: ["Portolio.", "Marketing.", "Design."],
         loop: true,
         typeSpeed: 100,
         backSpeed: 80,
