hotfix logo and hero section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"></a> -->
-      <h1 class="logo me-auto"><a href="index.html"><img src="assets/img/hero-logo.png" alt="" class="img-fluid"> mixcolors.</a></h1>
+      <h1 class="logo me-auto well-mix"><a href="index.html"><img src="assets/img/hero-logo.png" alt="" class="img-fluid"> mixcolors.</a></h1>
+      <a href="index.html" class="logo me-auto mobile-mix"><img src="assets/img/hero-logo.png" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
@@ -63,6 +64,7 @@
     <div class="container d-flex h-100">
       <div class="row justify-content-center align-self-center" data-aos="fade-up">
         <div class="col-lg-6 intro-info order-lg-first order-last" data-aos="zoom-in" data-aos-delay="100">
+          <h1 class="logo me-auto hero-mix">mixcolors.</h1>
           <h2>Soluções desenhadas<br> para <span class="multiText"></span></h2>
           <div>
             <a href="#about" class="btn-get-started scrollto">Começar</a>
