refactoring contact form

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8">
@@ -45,7 +45,7 @@
           <li><a class="nav-link scrollto" href="#about">Sobre nós</a></li>
           <li><a class="nav-link scrollto" href="#services">Serviços</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfólio</a></li>
-          <li><a class="nav-link scrollto" href="#footer">Contato</a></li>
+          <li><a class="nav-link scrollto" href="contact.html">Contato</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -57,7 +57,8 @@
       </div>
 
     </div>
-  </header><!-- End Header -->
+  </header>
+  <!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="clearfix">
@@ -603,102 +604,67 @@
         </ul>
 
       </div>
-    </section><!-- End F.A.Q Section -->
+    </section>
+    <!-- End F.A.Q Section -->
 
-  </main><!-- End #main -->
+  </main>
+  <!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="section-bg">
     <div class="footer-top">
       <div class="container">
-
         <div class="row">
-
-          <div class="col-lg-6">
-
-            <div class="row">
-
-              <div class="col-sm-6">
-
-                <div class="footer-info">
-                  <h4 style="font-size: 25px;">mixcolors.</h4>
-                  <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+            <div class="col-lg-6">
+                <div class="row">
+                    <div class="col-sm">
+                        <div class="footer-info">
+                        <h4 style="font-size: 25px;">mixcolors.</h4>
+                        <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+                        </div>
+                    </div>
+    
+                    <div class="col-sm">
+                        <div class="footer-links">
+                            <h4>Links úteis</h4>
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#about">About us</a></li>
+                                <li><a href="#">Services</a></li>
+                                <li><a href="#">Terms of service</a></li>
+                                <li><a href="#">Privacy policy</a></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-
-                <div class="footer-links">
-                  <h4>Contact Us</h4>
-                  <p>
-                    A108 Adam Street <br>
-                    New York, NY 535022<br>
-                    United States <br>
-                    <strong>Phone:</strong> +1 5589 55488 55<br>
-                    <strong>Email:</strong> info@example.com<br>
-                  </p>
-                </div>
-
-              </div>
-
-              <div class="col-sm-6">
-                <div class="footer-links">
-                  <h4>Links úteis</h4>
-                  <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#about">About us</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Terms of service</a></li>
-                    <li><a href="#">Privacy policy</a></li>
-                  </ul>
-                </div>
-
-                <div class="social-links">
-                  <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-                  <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-                  <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                  <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-                </div>
-
-              </div>
-
             </div>
+            <div class="col-lg-6">
+                <div class="row">
+                    <div class="col-sm">
+                        <div class="footer-links">
+                            <h4>Contact Us</h4>
+                            <p>
+                                A108 Adam Street <br>
+                                New York, NY 535022<br>
+                                United States <br>
+                                <strong>Phone:</strong> +1 5589 55488 55<br>
+                                <strong>Email:</strong> info@example.com<br>
+                            </p>
+                        </div>
+                    </div>
 
-          </div>
-
-          <div class="col-lg-6">
-
-            <div class="form">
-
-              <h4>Envie-nos uma mensagem</h4>
-              <p>Eos ipsa est voluptates. Nostrum nam libero ipsa vero. Debitis quasi sit eaque numquam similique commodi harum aut temporibus.</p>
-
-              <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Digite o seu nome" required>
+                    <div class="col-sm">
+                        <h4>Siga-nos!</h4>
+                        <div class="social-links">
+                            <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+                            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+                            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+                            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                        </div>
+                    </div>
                 </div>
-                <div class="form-group mt-3">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Digite o seu e-mail" required>
-                </div>
-                <div class="form-group mt-3">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" required>
-                </div>
-                <div class="form-group mt-3">
-                  <textarea class="form-control" name="message" rows="4" placeholder="Mensagem" required></textarea>
-                </div>
-
-                <div class="my-3">
-                  <div class="loading">Enviando...</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Sua mensagem foi enviada com sucesso. Obrigado!</div>
-                </div>
-
-                <div class="text-center"><button type="submit" title="Send Message">Enviar mensagem</button></div>
-              </form>
-
-            </div>
-
-          </div>
-
+             </div>
         </div>
-
       </div>
     </div>
 
@@ -710,7 +676,8 @@
         Designed by <a href="https://github.com/msousaWEB">msousaWEB</a>
       </div>
     </div>
-  </footer><!-- End  Footer -->
+  </footer>
+  <!-- End  Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
@@ -726,6 +693,7 @@
   <!-- Template Main JS File -->
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="assets/js/main.js"></script>
+  <!-- <script src="https://smtpjs.com/v3/smtp.js"></script> -->
 
   <script>
     var typingEffect = new Typed (".multiText", {
@@ -735,6 +703,18 @@
         backSpeed: 80,
         backDelay: 1500,
     })
+
+    Email.send({
+        Host : "smtp.yourisp.com",
+        Username : "username",
+        Password : "password",
+        To : 'them@website.com',
+        From : "you@isp.com",
+        Subject : "This is the subject",
+        Body : "And this is the body"
+      }).then(
+        message => alert(message)
+    );
 </script>
 
 </body>
