--- a/inner-page.html
+++ b/inner-page.html
@@ -88,15 +88,14 @@
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
-
         <ol>
           <li><a href="index.html">Home</a></li>
-          <li>Inner Page</li>
+          <li>Contato</li>
         </ol>
-        <h2>Inner Page</h2>
-
+        <h2>Contato</h2>
       </div>
-    </section><!-- End Breadcrumbs -->
+    </section>
+    <!-- End Breadcrumbs -->
 
     <section class="inner-page pt-4">
       <div class="container">
