--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
             <div class="container" data-aos="fade-up">
               <div class="row feature-item mt-1 pt-5">
                 <div class="col-lg-6 wow fadeInUp order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-                  <img src="assets/img/mobile.svg" class="img-fluid" alt="">
+                  <img id="contact-img" src="assets/img/mobile.svg" class="img-fluid" alt="">
                 </div>
 
                 <div class="col-lg-6 wow fadeInUp pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-right" data-aos-delay="150">
