--- a/index.html
+++ b/index.html
@@ -457,7 +457,9 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing section-bg wow fadeInUp">
+   <!--
+
+     <section id="pricing" class="pricing section-bg wow fadeInUp">
 
       <div class="container" data-aos="fade-up">
 
@@ -468,7 +470,8 @@
 
         <div class="row flex-items-xs-middle flex-items-xs-center">
 
-          <!-- Basic Plan  -->
+          Basic Plan
+
           <div class="col-xs-12 col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
               <div class="card-header">
@@ -489,7 +492,8 @@
             </div>
           </div>
 
-          <!-- Regular Plan  -->
+          Regular Plan
+
           <div class="col-xs-12 col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="card">
               <div class="card-header">
@@ -510,7 +514,8 @@
             </div>
           </div>
 
-          <!-- Premium Plan  -->
+          Premium Plan
+
           <div class="col-xs-12 col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
               <div class="card-header">
@@ -535,6 +540,7 @@
       </div>
 
     </section>
+   -->
     <!-- End Pricing Section -->
 
     <!-- ======= F.A.Q Section ======= -->
@@ -630,9 +636,8 @@
                             <ul>
                                 <li><a href="#">Home</a></li>
                                 <li><a href="#about">About us</a></li>
-                                <li><a href="#">Services</a></li>
-                                <li><a href="#">Terms of service</a></li>
-                                <li><a href="#">Privacy policy</a></li>
+                                <li><a href="#services">Services</a></li>
+                                <li><a href="./contact.html">Contato</a></li>
                             </ul>
                         </div>
                     </div>
