--- a/contact.html
+++ b/contact.html
@@ -131,16 +131,15 @@
                         </div>
         
                         <div class="col-sm">
-                            <div class="footer-links">
-                                <h4>Links úteis</h4>
-                                <ul>
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#about">About us</a></li>
-                                    <li><a href="#">Services</a></li>
-                                    <li><a href="#">Terms of service</a></li>
-                                    <li><a href="#">Privacy policy</a></li>
-                                </ul>
-                            </div>
+                          <div class="footer-links">
+                            <h4>Links úteis</h4>
+                            <ul>
+                                <li><a href="./index.html">Home</a></li>
+                                <li><a href="./index.html#about">About us</a></li>
+                                <li><a href="./index.html#services">Services</a></li>
+                                <li><a href="./contact.html" class="scrollto">Contato</a></li>
+                            </ul>
+                        </div>
                         </div>
                     </div>
                 </div>
