--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
 
   <script>
     var typingEffect = new Typed (".multiText", {
-        strings: ["Portfólio.", "Marketing.", "Design."],
+        strings: ["Portfolio.", "Marketing.", "Design."],
         loop: true,
         typeSpeed: 100,
         backSpeed: 80,
